mdapi_output_dir/objects/FinanceTransaction.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Car_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Car Part</label>
        <referenceTo>Car_Part__c</referenceTo>
        <relationshipLabel>Finance Transactions</relationshipLabel>
        <relationshipName>Finance_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Car__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Car</label>
        <referenceTo>Car__c</referenceTo>
        <relationshipLabel>Finance Transactions</relationshipLabel>
        <relationshipName>Finance_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Finance Transactions</relationshipLabel>
        <relationshipName>Finance_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>Name</columns>
        <columns>TotalAmountWithTax</columns>
        <columns>ReferenceEntity</columns>
        <columns>TransactionDate</columns>
        <columns>EffectiveDate</columns>
        <filterScope>Mine</filterScope>
        <label>My Finance Transactions</label>
    </listViews>
</CustomObject>